--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:XMicjeW4qvxgka+n9Qbp92BKkyIuAum8e5tkjuSPPNo=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/makassar
-APP_URL=http://localhost:8002
+APP_URL=http://kendarikota.test
 
 APP_LOCALE=id
 APP_FALLBACK_LOCALE=id
@@ -22,7 +22,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=shared-mysql
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=db_kendarikota
 DB_USERNAME=root
